--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,6 +18,7 @@
 @use "elements/game_card/bigImgBlock";
 @use "elements/game_card/forScroll";
 @use "elements/game_card/mainInfo";
+@use "elements/game_card/additions";
 @use "elements/game_card/editions";
 @use "elements/game_card/information";
 @use "elements/game_card/similar";
