--- a/scss/default/_base.scss
+++ b/scss/default/_base.scss
@@ -197,6 +197,13 @@ $shadow_light: inset -1px 0 0 0 rgba(255, 255, 255, .25);
     }
 }
 
+@mixin style-webkit_scrollbar_hidden {
+    &::-webkit-scrollbar {
+        width: 0;
+        height: 0;
+    }
+}
+
 // -------- fonts --------
 
 $fnt-all: robotoFlex, sans-serif;
