--- a/scss/elements/game_card/_additions.scss
+++ b/scss/elements/game_card/_additions.scss
@@ -33,7 +33,7 @@
         }
         &__grid {
             width: 100%;
-            max-height: 500px;
+            max-height: 290px;
             overflow: auto;
             padding: 10px;
             @include base.style-webkit_scrollbar;
@@ -43,7 +43,7 @@
                 gap: 5px;
             }
             &_editions {
-                @include base.grid(20px, 2);
+                @include base.grid(20px, 1);
             }
         }
         &__bottom {
@@ -55,10 +55,10 @@
             background: linear-gradient(to top, base.$clr-main_body, transparent);
         }
         &_dlc {
-            width: 50%;
+            width: 66.6%;
         }
         &_editions {
-            width: 50%;
+            width: 33.3%;
         }
     }
 }
@@ -68,7 +68,7 @@
     transition: 0.15s;
     &__imgBlock {
         width: 100%;
-        padding: 10px;
+        padding: 0px;
         position: relative;
         z-index: 1;
         transition: .2s;
@@ -123,7 +123,7 @@
     
     &:hover &{
         &__imgBlock  {
-            transform: scale(1.03);
+            transform: scale(.98);
         }
         &__info {
             @include base.style-main_hover;
